<resources>
    <string name="app_name">MiExamen01</string>
    <string name="id_Juego">ID</string>
    <string name="nameJuego">Name</string>
    <string name="descriptionJuego">Description</string>
    <string name="yearJuego">Year</string>
    <string name="publisherJuego">Publisher</string>
    <string name="countryJuego">Country</string>
    <string name="numPlayersJuego">No Players</string>
    <string name="agesJuego">Ages</string>
    <string name="playingTimeJuego">Playing Time</string>
    <string name="title_activity_maps">Map</string>
</resources>